removing function from feature engineering

--- a/notebooks/modelling.ipynb
+++ b/notebooks/modelling.ipynb
@@ -58,11 +58,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/09/24 07:48:35 WARN Utils: Your hostname, solid resolves to a loopback address: 127.0.0.2; using 192.168.0.39 instead (on interface enp5s0)\n",
-      "25/09/24 07:48:35 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "25/09/24 11:33:58 WARN Utils: Your hostname, solid resolves to a loopback address: 127.0.0.2; using 192.168.0.39 instead (on interface enp5s0)\n",
+      "25/09/24 11:33:58 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "25/09/24 07:48:35 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "25/09/24 11:33:58 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "bd835835-0432-43d7-b6c1-269160843234",
    "metadata": {},
    "outputs": [],
@@ -118,17 +118,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "96c5a606-0f10-4cef-891b-ec9134b57a5d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column account_id is string or is in exclude list: ['account_id', 'offer_id', 'time_received']\n",
+      "Column offer_id is string or is in exclude list: ['account_id', 'offer_id', 'time_received']\n",
+      "Column time_received is double or is in exclude list: ['account_id', 'offer_id', 'time_received']\n"
+     ]
+    }
+   ],
    "source": [
-    "df = fe.transform()"
+    "df, numerical_columns, categorical_columns = fe.transform()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "a05b22ad-acb2-4a42-9ac7-f8400d965ff7",
    "metadata": {},
    "outputs": [
@@ -175,8 +185,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "366d8ccf-96a4-46b4-98f2-27919589400f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['target',\n",
+       " 'total_spend_before',\n",
+       " 'transaction_count_before',\n",
+       " 'avg_ticket_before',\n",
+       " 'max_ticket_before',\n",
+       " 'min_ticket_before',\n",
+       " 'offers_viewed_count_before',\n",
+       " 'offers_completed_count_before',\n",
+       " 'customer_conversion_rate_before',\n",
+       " 'age',\n",
+       " 'credit_card_limit',\n",
+       " 'month_sin',\n",
+       " 'month_cos',\n",
+       " 'dayofweek_sin',\n",
+       " 'dayofweek_cos',\n",
+       " 'discount_value',\n",
+       " 'duration',\n",
+       " 'min_value',\n",
+       " 'email',\n",
+       " 'social',\n",
+       " 'mobile',\n",
+       " 'web']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numerical_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e8824d4-a1e0-4958-b851-90f9cfd14f17",
    "metadata": {},
    "outputs": [],
    "source": []
