removing some coments and add other

--- a/notebooks/modelling.ipynb
+++ b/notebooks/modelling.ipynb
@@ -72,11 +72,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/09/25 15:37:56 WARN Utils: Your hostname, solid resolves to a loopback address: 127.0.0.2; using 192.168.0.39 instead (on interface enp5s0)\n",
-      "25/09/25 15:37:56 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "25/09/25 16:09:56 WARN Utils: Your hostname, solid resolves to a loopback address: 127.0.0.2; using 192.168.0.39 instead (on interface enp5s0)\n",
+      "25/09/25 16:09:56 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "25/09/25 15:37:56 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "25/09/25 16:09:56 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "bd835835-0432-43d7-b6c1-269160843234",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "96c5a606-0f10-4cef-891b-ec9134b57a5d",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "a05b22ad-acb2-4a42-9ac7-f8400d965ff7",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "7c94ad47-8cfe-4085-96dd-301c343b46a0",
    "metadata": {},
    "outputs": [],
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "d8bd2bda-3bf8-4559-93a6-bc61d30e8873",
    "metadata": {
     "scrolled": true
@@ -236,6 +236,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "25/09/25 16:10:01 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
       "                                                                                "
      ]
     }
@@ -254,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "4b8f19b6-fb2a-47ab-9dfa-1bc817208ab5",
    "metadata": {},
    "outputs": [],
@@ -264,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "3f9f956c-eaf5-4a2e-9711-e2db6e177b6e",
    "metadata": {},
    "outputs": [],
@@ -274,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "d85d51e8-df56-479f-9f90-7d618acc4545",
    "metadata": {},
    "outputs": [],
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "67366aea-c4c3-4ecc-82a0-589dca662798",
    "metadata": {},
    "outputs": [
@@ -325,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "e0158833-516b-4462-af3f-0329ef75233d",
    "metadata": {},
    "outputs": [
@@ -335,7 +336,7 @@
        "np.float64(56.58)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "89ca691b-647d-421c-8d4d-7c11370e3625",
    "metadata": {},
    "outputs": [
@@ -356,7 +357,7 @@
        "np.float64(87.74)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "id": "98eff5d0-53e3-4a94-895e-6bc769c13bc3",
    "metadata": {},
    "outputs": [
@@ -393,7 +394,7 @@
        "  'support': 16994.0}}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "id": "04a4ac26-f272-4133-ad96-cbc134f52296",
    "metadata": {},
    "outputs": [],
@@ -422,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "id": "83b29218-5da8-438a-a2fb-636c8bc01934",
    "metadata": {},
    "outputs": [
