--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -622,7 +622,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "8c8c0301-3d6d-486f-90ca-e0abdcdbb583",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
